--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,24 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.26.0'
+    implementation 'org.testng:testng:7.11.0'
+    implementation 'ch.qos.logback:logback-classic:1.5.18'
+
+    implementation 'io.rest-assured:rest-assured:4.5.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation("io.rest-assured:json-schema-validator:3.0.0")
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
+
+task repo_ui(type: Test){
+    useTestNG();
+    if(project.hasProperty('repo')){
+        systemProperty 'repo', "${repo}"
+    }
+}
+
+//   ./gradlew clean -Prepo=QA45 repo_ui
